@@ -47,6 +47,7 @@ E(OP_RaidUpdate)
 E(OP_RaidJoin)
 E(OP_VetRewardsAvaliable)
 E(OP_InspectAnswer)
+E(OP_InspectRequest)
 E(OP_GroupInvite)
 E(OP_GroupFollow)
 E(OP_GroupFollow2)
@@ -100,6 +101,7 @@ D(OP_AdventureMerchantSell)
 D(OP_TradeSkillCombine)
 D(OP_RaidInvite)
 D(OP_InspectAnswer)
+D(OP_InspectRequest)
 D(OP_ShopPlayerBuy)
 D(OP_BazaarSearch)
 D(OP_LoadSpellSet)
