@@ -47,6 +47,7 @@ E(OP_RaidUpdate)
 E(OP_RaidJoin)
 E(OP_VetRewardsAvaliable)
 E(OP_InspectAnswer)
+E(OP_InspectRequest)
 E(OP_Track)
 E(OP_DeleteSpawn)
 E(OP_ApplyPoison)
@@ -89,6 +90,7 @@ D(OP_AdventureMerchantSell)
 D(OP_TradeSkillCombine)
 D(OP_RaidInvite)
 D(OP_InspectAnswer)
+D(OP_InspectRequest)
 D(OP_ApplyPoison)
 D(OP_DeleteItem)
 D(OP_AugmentItem)
