@@ -47,6 +47,7 @@ E(OP_RaidUpdate)
 E(OP_RaidJoin)
 E(OP_VetRewardsAvaliable)
 E(OP_InspectAnswer)
+E(OP_InspectRequest)
 E(OP_GroupInvite)
 E(OP_GroupFollow)
 E(OP_GroupFollow2)
@@ -70,8 +71,8 @@ E(OP_DzLeaderStatus)
 E(OP_DzJoinExpeditionConfirm)
 E(OP_TargetBuffs)
 E(OP_BuffCreate)
-E(OP_RespondAA)
 E(OP_SpawnAppearance)
+E(OP_RespondAA)
 E(OP_DisciplineUpdate)
 E(OP_AltCurrencySell)
 E(OP_AltCurrency)
@@ -107,6 +108,7 @@ D(OP_AdventureMerchantSell)
 D(OP_TradeSkillCombine)
 D(OP_RaidInvite)
 D(OP_InspectAnswer)
+D(OP_InspectRequest)
 D(OP_ShopPlayerBuy)
 D(OP_BazaarSearch)
 D(OP_LoadSpellSet)
@@ -115,8 +117,8 @@ D(OP_Damage)
 D(OP_EnvDamage)
 D(OP_ChannelMessage)
 D(OP_DeleteItem)
-D(OP_PetCommands)
 D(OP_AugmentItem)
+D(OP_PetCommands)
 D(OP_BuffRemoveRequest)
 D(OP_AltCurrencySellSelection)
 D(OP_AltCurrencySell)
