@@ -30,7 +30,6 @@ E(OP_CancelTrade)
 E(OP_ShopPlayerSell)
 E(OP_DeleteItem)
 E(OP_ItemVerifyReply)
-E(OP_InterruptCast)
 E(OP_DeleteCharge)
 E(OP_MoveItem)
 E(OP_OpenNewTasksWindow)
@@ -48,6 +47,7 @@ E(OP_RaidUpdate)
 E(OP_RaidJoin)
 E(OP_VetRewardsAvaliable)
 E(OP_InspectAnswer)
+E(OP_InspectRequest)
 E(OP_GroupInvite)
 E(OP_GroupFollow)
 E(OP_GroupFollow2)
@@ -71,12 +71,18 @@ E(OP_DzLeaderStatus)
 E(OP_DzJoinExpeditionConfirm)
 E(OP_TargetBuffs)
 E(OP_BuffCreate)
+E(OP_SpawnAppearance)
+E(OP_RespondAA)
+E(OP_DisciplineUpdate)
+E(OP_AltCurrencySell)
+E(OP_AltCurrency)
 E(OP_RequestClientZoneChange)
 E(OP_ZoneChange)
-E(OP_SpawnAppearance)
 E(OP_WearChange)
 E(OP_ShopRequest)
 E(OP_CastSpell)
+E(OP_InterruptCast)
+
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
 D(OP_CharacterCreate)
@@ -109,6 +115,7 @@ D(OP_AdventureMerchantSell)
 D(OP_TradeSkillCombine)
 D(OP_RaidInvite)
 D(OP_InspectAnswer)
+D(OP_InspectRequest)
 D(OP_ShopPlayerBuy)
 D(OP_BazaarSearch)
 D(OP_LoadSpellSet)
@@ -117,8 +124,12 @@ D(OP_Damage)
 D(OP_EnvDamage)
 D(OP_ChannelMessage)
 D(OP_DeleteItem)
-D(OP_ZoneChange)
 D(OP_AugmentItem)
+D(OP_PetCommands)
+D(OP_BuffRemoveRequest)
+D(OP_AltCurrencySellSelection)
+D(OP_AltCurrencySell)
+D(OP_ZoneChange)
 D(OP_ZoneEntry)
 D(OP_ShopRequest)
 #undef E
